fix: try and force first category visible

--- a/plugins/gatsby-theme-carbon-svgs/components/shared/SvgLibrary.module.scss
+++ b/plugins/gatsby-theme-carbon-svgs/components/shared/SvgLibrary.module.scss
@@ -1,6 +1,9 @@
 .svg-page {
   margin-left: -$spacing-05;
   margin-right: -$spacing-05;
+
+  // prevent jank while importing icons
+  min-height: 60vh;
 }
 
 .filter-row {
